azureDeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().Location]",
        "metadata": {
            "description": "Geo-Location to deploy SonicWall NSv"
        }
    },
    "vmNamePrefix": {
      "type": "string",
      "metadata": {
        "description": "Name Prefix of SonicWall-NSv HA VMs in the Azure portal\nThe two name of the VMs will be suffixed with -HA1/-HA2."
      }
    },
    "SSHUserName": {
      "type": "string",
      "defaultValue": "management",
      "metadata": {
        "description": "Username for SSH access to SonicWall-NSv console"
      }
    },
    "authenticationType": {
      "type": "string",
      "metadata": {
        "descritpion": "Type of authentication "
      },
      "allowedValues": [
        "sshPublicKey",
        "password"
      ],
      "defaultValue": "password"
    },
    "SSHPassword": {
      "type": "securestring",
      "metadata": {
        "description": "The password for the above SSH user. Password must contain one non alpha-numeric character, one uppercase alpha-numeric character and one numeric character"
      }
    },
    "sshKey": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "SSH rsa public key file as a string."
      }
    },
    "sourceImageVhdUri": {
      "type": "string",
      "metadata": {
        "description": "The source of the generalized blob containing the custom image"
      }
    },
    "managementAccessIPSource": {
      "type": "string",
      "metadata": {
        "description": "Public IP address allowed access SonicWall NSv HTTPS & SSH management "
      },
      "defaultValue": "0.0.0.0/0"
    },
    "vmSize": {
      "type": "string",
      "allowedValues": [
        "Standard_D2_v2",
        "Standard_D3_v2",
        "Standard_D4_v2",
        "Standard_D5_v2"
      ],
      "metadata": {
        "description": "Azure VM size for SonicWall-NSv model, select Standard_D2_v2 for NSv 200, select Standard_D3_v2 for NSv 400, select Standard_D4_v2 for NSv 800 and select Standard_D5_v2 for NSv 1600"
      },
      "defaultValue": "Standard_D3_v2"
    },
    "baseUrl": {
      "type": "string",
      "metadata": {
        "artifactsBaseUrl": ""
      },
      "defaultValue": "https://raw.githubusercontent.com/sw-yliu/sonicwall-nsv-azure-templates/feature/HA"
    },
    "virtualNetworkNewOrExisting": {
      "type": "string",
      "defaultValue": "new",
      "metadata": {
        "description": "Determines whether or not a new virtual network should be provisioned."
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "Name of the virtual network that the consumer wants to use"
      },
      "defaultValue": "firewallVnet"
    },
    "virtualNetworkAddressPrefix": {
      "type": "string",
      "defaultValue": "192.168.0.0/16",
      "metadata": {
        "description": "Virtual network address CIDR"
      }
    },
    "virtualNetworkResourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Name of the resource group for the existing virtual network"
      }
    },
    "subnetWANName": {
      "type": "string",
      "defaultValue": "WAN-X1",
      "metadata": {
        "description": "Subnet for the WAN (X1)"
      }
    },
    "subnetLANName": {
      "type": "string",
      "defaultValue": "LAN-X0",
      "metadata": {
        "description": "Subnet for the LAN (X0)"
      }
    },
    "subnetHAName": {
      "type": "string",
      "defaultValue": "HA-X2",
      "metadata": {
        "description": "Subnet for the HA (X2)"
      }
    },
    "subnetWANPrefix": {
      "type": "string",
      "defaultValue": "192.168.1.0/24",
      "metadata": {
        "description": "WAN (X1) subnet CIDR"
      }
    },
    "subnetLANPrefix": {
      "type": "string",
      "defaultValue": "192.168.2.0/24",
      "metadata": {
        "description": "LAN (X0) subnet CIDR"
      }
    },
    "subnetHAPrefix": {
      "type": "string",
      "defaultValue": "192.168.3.0/24",
      "metadata": {
        "description": "HA (X2) subnet CIDR"
      }
    },
    "HA1PublicIpNewOrExisting": {
      "type": "string",
      "defaultValue": "new",
      "metadata": {
        "description": "Determines whether or not a new public ip should be provisioned."
      }
    },
    "HA1PublicIpName": {
      "type": "string",
      "defaultValue": "HA1PublicIp",
      "metadata": {
        "description": "Name of the public ip address"
      }
    },
    "HA1PublicIpDns": {
      "type": "string",
      "defaultValue": "[concat('sonicwall-nsv-ha1-', uniqueString(resourceGroup().id))]",
      "metadata": {
        "description": "DNS of the public ip address for the VM"
      }
    },
    "HA1PublicIpResourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Name of the resource group for the public ip address"
      }
    },
    "HA1PublicIpAllocationMethod": {
      "type": "string",
      "defaultValue": "Dynamic",
      "allowedValues": [
        "Dynamic",
        "Static"
      ],
      "metadata": {
        "description": "Allocation method for the public ip address"
      }
    },
    "HA1PublicIpSku": {
      "type": "string",
      "defaultValue": "Basic",
      "allowedValues": [
        "Basic",
        "Standard"
      ],
      "metadata": {
        "description": "Name of the resource group for the public ip address"
      }
    },
    "HA2PublicIpNewOrExisting": {
      "type": "string",
      "defaultValue": "new",
      "metadata": {
        "description": "Determines whether or not a new public ip should be provisioned."
      }
    },
    "HA2PublicIpName": {
      "type": "string",
      "defaultValue": "HA2PublicIp",
      "metadata": {
        "description": "Name of the public ip address"
      }
    },
    "HA2PublicIpDns": {
      "type": "string",
      "defaultValue": "[concat('sonicwall-nsv-ha2-', uniqueString(resourceGroup().id))]",
      "metadata": {
        "description": "DNS of the public ip address for the VM"
      }
    },
    "HA2PublicIpResourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Name of the resource group for the public ip address"
      }
    },
    "HA2PublicIpAllocationMethod": {
      "type": "string",
      "defaultValue": "Dynamic",
      "allowedValues": [
        "Dynamic",
        "Static"
      ],
      "metadata": {
        "description": "Allocation method for the public ip address"
      }
    },
    "HA2PublicIpSku": {
      "type": "string",
      "defaultValue": "Basic",
      "allowedValues": [
        "Basic",
        "Standard"
      ],
      "metadata": {
        "description": "Name of the resource group for the public ip address"
      }
    },
    "HAFloatPublicIpNewOrExisting": {
      "type": "string",
      "defaultValue": "new",
      "metadata": {
        "description": "Determines whether or not a new public ip should be provisioned."
      }
    },
    "HAFloatPublicIpName": {
      "type": "string",
      "defaultValue": "HAFloatPublicIp",
      "metadata": {
        "description": "Name of the public ip address"
      }
    },
    "HAFloatPublicIpDns": {
      "type": "string",
      "defaultValue": "[concat('sonicwall-nsv-', uniqueString(resourceGroup().id))]",
      "metadata": {
        "description": "DNS of the public ip address for the VM"
      }
    },
    "HAFloatPublicIpResourceGroupName": {
      "type": "string",
      "defaultValue": "[resourceGroup().name]",
      "metadata": {
        "description": "Name of the resource group for the public ip address"
      }
    },
    "HAFloatPublicIpAllocationMethod": {
      "type": "string",
      "defaultValue": "Static",
      "allowedValues": [
        "Static"
      ],
      "metadata": {
        "description": "Allocation method for the public ip address"
      }
    },
    "HAFloatPublicIpSku": {
      "type": "string",
      "defaultValue": "Basic",
      "allowedValues": [
        "Basic",
        "Standard"
      ],
      "metadata": {
        "description": "Name of the resource group for the public ip address"
      }
    }
  },
  "variables": {
    "HA1NicName": "[concat(parameters('vmNamePrefix'), '-HA1-interface')]",
    "HA2NicName": "[concat(parameters('vmNamePrefix'), '-HA2-interface')]",
    "nsgname-mgmt": "[concat(parameters('vmNamePrefix'), '-NSG')]",
    "lan-default-rt": "[concat(parameters('subnetLANName'), '-RT')]",
    "HA1PublicIpAddressId": {
      "id": "[resourceId(parameters('HA1PublicIpResourceGroupName'), 'Microsoft.Network/publicIPAddresses', parameters('HA1PublicIpName'))]"
    },
    "HA2PublicIpAddressId": {
      "id": "[resourceId(parameters('HA2PublicIpResourceGroupName'), 'Microsoft.Network/publicIPAddresses', parameters('HA2PublicIpName'))]"
    },
    "HAFloatPublicIpAddressId": {
      "id": "[resourceId(parameters('HAFloatPublicIpResourceGroupName'), 'Microsoft.Network/publicIPAddresses', parameters('HAFloatPublicIpName'))]"
    },
    "HAFloatPrivateIPSuffix": "250",
    "vmTemplateUrl": "[concat(parameters('baseUrl'), '/virtual-machine-', parameters('authenticationType'),'.json')]"
  },
  "resources": [
    {
      "condition": "[equals(parameters('HA1PublicIpNewOrExisting'), 'new')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2018-04-01",
      "name": "[parameters('HA1PublicIpName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('HA1PublicIpSku')]"
      },
      "properties": {
        "publicIPAllocationMethod": "[parameters('HA1PublicIpAllocationMethod')]",
        "dnsSettings": {
          "domainNameLabel": "[parameters('HA1PublicIpDns')]"
        }
      }
    },
    {
      "condition": "[equals(parameters('HA2PublicIpNewOrExisting'), 'new')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2018-04-01",
      "name": "[parameters('HA2PublicIpName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('HA2PublicIpSku')]"
      },
      "properties": {
        "publicIPAllocationMethod": "[parameters('HA2PublicIpAllocationMethod')]",
        "dnsSettings": {
          "domainNameLabel": "[parameters('HA2PublicIpDns')]"
        }
      }
    },
    {
      "condition": "[equals(parameters('HAFloatPublicIpNewOrExisting'), 'new')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2018-04-01",
      "name": "[parameters('HAFloatPublicIpName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('HAFloatPublicIpSku')]"
      },
      "properties": {
        "publicIPAllocationMethod": "[parameters('HAFloatPublicIpAllocationMethod')]",
        "dnsSettings": {
          "domainNameLabel": "[parameters('HAFloatPublicIpDns')]"
        }
      }
    },
    {
      "condition": "[equals(parameters('virtualNetworkNewOrExisting'), 'new')]",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2018-04-01",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgname-mgmt'))]",
        "[concat('Microsoft.Network/routeTables/', variables('lan-default-rt'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
		  "[parameters('virtualNetworkAddressPrefix')]"
	  ]
        },
        "subnets": [
          {
            "name": "[parameters('subnetWANName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetWANPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgname-mgmt'))]"
              }
            }
          },
          {
            "name": "[parameters('subnetLANName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetLANPrefix')]",
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('lan-default-rt'))]"
              }
            }
          },
          {
            "name": "[parameters('subnetHAName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetHAPrefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('vmNamePrefix'), '-NSG')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-HTTPS-management-from-IP",
            "properties": {
              "description": "Allow management from CIDR",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('managementAccessIPSource')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-SSH-management-from-IP",
            "properties": {
              "description": "Allow management from CIDR",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[parameters('managementAccessIPSource')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-HTTP-management-from-IP",
            "properties": {
              "description": "Allow management from CIDR",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "[parameters('managementAccessIPSource')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-AzureLoadBalancer",
            "properties": {
              "description": "Allow AzureLoadBalancer",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "168.63.129.16",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 103,
              "direction": "Inbound"
            }
          },
          {
            "name": "Deny-HTTPS-management",
            "properties": {
              "description": "Deny HTTPS",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "Deny-SSH-management",
            "properties": {
              "description": "Deny SSH",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 201,
              "direction": "Inbound"
            }
          },
          {
            "name": "Deny-HTTP-management",
            "properties": {
              "description": "Deny HTTP",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 202,
              "direction": "Inbound"
            }
          },
          {
            "name": "Default-Allow",
            "properties": {
              "description": "Allow all other traffic so firewall can do its job",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "apiVersion": "2018-11-01",
      "condition": "[equals(parameters('virtualNetworkNewOrExisting'), 'new')]",
      "name": "[concat(parameters('subnetLANName'), '-RT')]",
      "location": "[parameters('location')]",
      "properties": {
        "routes": [
          {
            "name": "[concat(parameters('subnetLANName'), '-Default-Route')]",
            "properties": {
              "addressPrefix": "0.0.0.0/0",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "[concat(substring(parameters('subnetLANPrefix'), 0, lastIndexOf(parameters('subnetLANPrefix'), '.')), '.', variables('HAFloatPrivateIPSuffix'))]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('HA1NicName'), '-X1')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[parameters('HA1PublicIpName')]",
        "[parameters('virtualNetworkName')]",
        "[variables('nsgname-mgmt')]"
      ],
      "tags": {
        "displayName": "[concat('NetworkInterfaces', '-X1')]"
      },
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "[concat('ipconfig', '1')]",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
	      "publicIPAddress": "[if(not(equals(parameters('HA1PublicIpNewOrExisting'), 'none')), variables('HA1PublicIpAddressId') , json('null'))]",
              "subnet": {
                "id": "[resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('subnetWANName'))]"
              },
              "primary": true
            }
          },
          {
            "name": "[concat('ipconfig', '-float')]",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[concat(substring(parameters('subnetWANPrefix'), 0, lastIndexOf(parameters('subnetWANPrefix'), '.')), '.', variables('HAFloatPrivateIPSuffix'))]",
	      "publicIPAddress": "[if(not(equals(parameters('HAFloatPublicIpNewOrExisting'), 'none')), variables('HAFloatPublicIpAddressId') , json('null'))]",
              "subnet": {
                "id": "[resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('subnetWANName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('HA1NicName'), '-X0')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[parameters('virtualNetworkName')]"
      ],
      "tags": {
        "displayName": "[concat('NetworkInterfaces', '-X0')]"
      },
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "[concat('ipconfig', '2')]",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('subnetLANName'))]"
              },
              "primary": true
            }
          },
          {
            "name": "[concat('ipconfig', '-float')]",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[concat(substring(parameters('subnetLANPrefix'), 0, lastIndexOf(parameters('subnetLANPrefix'), '.')), '.', variables('HAFloatPrivateIPSuffix'))]",
              "subnet": {
                "id": "[resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('subnetLANName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('HA1NicName'), '-X2')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[parameters('virtualNetworkName')]"
      ],
      "tags": {
        "displayName": "[concat('NetworkInterfaces', '-X2')]"
      },
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "[concat('ipconfig', '3')]",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('subnetHAName'))]" 
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('HA2NicName'), '-X1')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[parameters('HA2PublicIpName')]",
        "[parameters('virtualNetworkName')]",
        "[variables('nsgname-mgmt')]"
      ],
      "tags": {
        "displayName": "[concat('NetworkInterfaces', '-X1')]"
      },
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "[concat('ipconfig', '1')]",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
	      "publicIPAddress": "[if(not(equals(parameters('HA2PublicIpNewOrExisting'), 'none')), variables('HA2PublicIpAddressId') , json('null'))]",
              "subnet": {
                "id": "[resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('subnetWANName'))]" 
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('HA2NicName'), '-X0')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[parameters('virtualNetworkName')]"
      ],
      "tags": {
        "displayName": "[concat('NetworkInterfaces', '-X0')]"
      },
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "[concat('ipconfig', '2')]",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('subnetLANName'))]"  
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('HA2NicName'), '-X2')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[parameters('virtualNetworkName')]"
      ],
      "tags": {
        "displayName": "[concat('NetworkInterfaces', '-X2')]"
      },
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "[concat('ipconfig', '1')]",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('subnetHAName'))]" 
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Compute/images",
      "apiVersion": "2016-04-30-preview",
      "name": "sonicwallNsvHAImage",
      "condition": "[not(equals(parameters('sourceImageVhdUri'), ''))]",
      "location": "[resourceGroup().location]",
      "properties": {
        "storageProfile": {
          "osDisk": {
            "osType": "Linux",
            "osState": "Generalized",
            "blobUri": "[parameters('sourceImageVhdUri')]",
            "storageAccountType": "Standard_LRS"
          }
        }
      }
    },
    {
      "name": "SonicWall-NSv-VM-HA1",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2018-05-01",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('HA1NicName'), '-X1')]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('HA1NicName'), '-X0')]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('HA1NicName'), '-X2')]",
        "[concat('Microsoft.Compute/images/', 'sonicwallNsvHAImage')]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('vmTemplateUrl')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "vmName": {
            "value": "[concat(parameters('vmNamePrefix'), '-HA1')]"
          },
          "imageId": {
            "value": "[resourceId('Microsoft.Compute/images', 'sonicwallNsvHAImage')]"
          },
          "nicName": {
            "value": "[variables('HA1NicName')]"
          },
          "vmSize": {
            "value": "[parameters('vmSize')]"
          },
          "SSHUserName": {
            "value": "[parameters('SSHUserName')]"
          },
          "SSHPassword": {
            "value": "[parameters('SSHPassword')]"
          },
          "sshKey": {
            "value": "[parameters('sshKey')]"
          }
        }
      }
    },
    {
      "name": "SonicWall-NSv-VM-HA2",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2018-05-01",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('HA2NicName'), '-X1')]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('HA2NicName'), '-X0')]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('HA2NicName'), '-X2')]",
        "[concat('Microsoft.Compute/images/', 'sonicwallNsvHAImage')]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('vmTemplateUrl')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "vmName": {
            "value": "[concat(parameters('vmNamePrefix'), '-HA2')]"
          },
          "imageId": {
            "value": "[resourceId('Microsoft.Compute/images', 'sonicwallNsvHAImage')]"
          },
          "nicName": {
            "value": "[variables('HA2NicName')]"
          },
          "vmSize": {
            "value": "[parameters('vmSize')]"
          },
          "SSHUserName": {
            "value": "[parameters('SSHUserName')]"
          },
          "SSHPassword": {
            "value": "[parameters('SSHPassword')]"
          },
          "sshKey": {
            "value": "[parameters('sshKey')]"
          }
        }
      }
    }
  ]
}
